--- a/B3 3.5.html
+++ b/B3 3.5.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <img src="3.5a.png" alt=""><img src="3.5b.png" alt=""><img src="3.5c.png" alt="">
+    <img src="imgb3.3.5a.png" alt=""><img src="imgb3.3.5b.png" alt=""><img src="imgb3.3.5c.png" alt="">
 </body>
 
 </html>
