--- a/Total-Tool.html
+++ b/Total-Tool.html
@@ -63,7 +63,7 @@
                 <a href="https://arisu171.github.io/Long.D.Shine/B3 3.3.html">3.3</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B3 3.4.html">3.4</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B3 3.5.html">3.5</a>
-                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">4</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/a.Home.html">4</a>
             </div>
         </div>
         <div class="dropdown">
@@ -72,7 +72,7 @@
             </button>
             <div class="dropdown-content">
                 <a href="https://arisu171.github.io/Long.D.Shine/B3 CSS.Syntax.html">CSS Syntax</a>
-                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">Home</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/a.Home.html">Home</a>
             </div>
         </div>
         <div class="dropdown">
@@ -83,7 +83,7 @@
                 <a href="https://arisu171.github.io/Long.D.Shine/B5 BTTL.html">BTTL</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B5 Material.html">Material</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B5 Baomoi.html">BaoMoi</a>
-                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">Home</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/a.Home.html">Home</a>
             </div>
         </div>
         <div class="dropdown">
@@ -101,7 +101,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">Home</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/a.Home.html">Home</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B6 Kalium.html">Kalium-1</a>
             </div>
         </div>
@@ -110,7 +110,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="https://arisu171.github.io/Long.D.Shine/Home.html">B1 js</a>
+                <a href="https://arisu171.github.io/Long.D.Shine/a.Home.html">B1 js</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B8 Min-Max.html">Max-Min</a>
                 <a href="https://arisu171.github.io/Long.D.Shine/B8 Gacha.html">Gacha</a>
             </div>
