--- a/a.Home.html
+++ b/a.Home.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="stylesheet" href="Home.css">
-    <link rel="stylesheet" href="Home-nav.css">
-    <link rel="stylesheet" href="Home-banner.css">
+    <link rel="stylesheet" href="a.Home.css">
+    <link rel="stylesheet" href="a.Home-nav.css">
+    <link rel="stylesheet" href="a.Home-banner.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="fontawesome-free-6.6.0-web/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -151,9 +151,9 @@
             </div>
         </div>
     </div>
-    <script src="Home.js"></script>
-    <script src="Home-banner.js"></script>
-    <script src="Home-nav.js"></script>
+    <script src="a.Home.js"></script>
+    <script src="a.Home-banner.js"></script>
+    <script src="a.Home-nav.js"></script>
 </body>
 
 </html>
