--- a/a.Home.html
+++ b/a.Home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="a.Home-nav.css">
     <link rel="stylesheet" href="a.Home-banner.css">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="fontawesome-free-6.6.0-web/css/all.css">
+    <link rel="stylesheet" href="font-awesome-6.6.0-pro-full-main/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Home</title>
 </head>
@@ -20,43 +20,26 @@
         <div class="navbar">
             <div class="navleft"><a href="#bannerimg1"></a></div>
             <div class="navright" id="navright">
-                <div class="navtitle navbarcurrent" id="navbarHome"><a href="#">Home</a></div>
-                <div class="navtitle" id="navbarPages">
-                    <a href="#" class="navdroptitle">Pages</a>
-                    <div class="navdroplist">
-                        <a href="#">About Us</a>
-                        <a href="#">Our Services</a>
-                        <a href="#">Contact Us</a>
-                        <a href="#">Destinations</a>
-                    </div>
-                </div>
-                <a href="#" class="navtitle" id="navbarTourist">Tourist</a>
-                <a href="#" class="navtitle" id="navbarRegions">Regions</a>
-                <div class="navtitle" id="navbarTrans">
-                    <a href="#" class="navdroptitle">Transportations</a>
-                    <div class="navdroplist">
-                        <a href="#">Carental</a>
-                        <a href="#">Bus Shuttle</a>
-                        <a href="#">Airpot Trans</a>
-                    </div>
-                </div>
-                <a href="#" class="navtitle" id="navbarBlog">Blog</a>
-                <a href="#" class="navuser"><i class="fa fa-user"></i></a>
+                <a href="#" class="navtitle navcurrent" id="navbarHome">Home</a>
+                <a href="#" class="navtitle" id="navbarAbout">About Us</a>
+                <a href="#" class="navtitle" id="navbarSkill">Skills</a>
+                <a href="#" class="navtitle" id="navbarProject">Projects</a>
+                <a href="#" class="navtitle" id="navbarContact">Contact Us</a>
             </div>
             <div class="navbutton navradius navhide hide" id="navbutt">
                 <div class="navicon navhide" id="navicon" onclick="shownav()"><i class="fa-solid fa-bars"></i></div>
-                <div class="navitem navhide">
-                    <a href="#bannerimg1">
-                        <i class="fa-solid fa-house"></i>
+                <div class="navitem navhide" id="homebut">
+                    <a href="#banner">
+                        <i class="fa-duotone fa-solid fa-house"></i>
                         <div class="navitcap">Home</div>
                     </a>
                 </div>
-                <div class="navitem navhide" id="Pages">
+                <div class="navitem navhide" id="aboutbut">
                     <div>
-                        <i class="fa-solid fa-users"></i>
-                        <div class="navitcap">Pages</div>
+                        <i class="fa-duotone fa-solid fa-user"></i>
+                        <div class="navitcap">About</div>
                     </div>
-                    <a href="#" class="multicon multiconpage hide" id="rmulticon0">
+                    <!-- <a href="#" class="multicon multiconpage hide" id="rmulticon0">
                         <div>About</div>
                     </a>
                     <a href="#" class="multicon multiconpage hide" id="rmulticon2">
@@ -67,26 +50,26 @@
                     </a>
                     <a href="#" class="multicon multiconpage hide" id="rmulticon6">
                         <div>Dests</div>
-                    </a>
+                    </a> -->
                 </div>
-                <div class="navitem navhide">
+                <div class="navitem navhide" id="skillbut">
                     <a href="#">
-                        <i class="fa-solid fa-calendar-days"></i>
-                        <div class="navitcap">Tourist</div>
+                        <i class="fa-duotone fa-solid fa-code"></i>
+                        <div class="navitcap">Skills</div>
                     </a>
                 </div>
-                <div class="navitem navhide">
+                <div class="navitem navhide" id="projectsbut">
                     <a href="#">
-                        <i class="fa-solid fa-globe"></i>
-                        <div class="navitcap">Regions</div>
+                        <i class="fa-duotone fa-solid fa-code-branch"></i>
+                        <div class="navitcap">Projects</div>
                     </a>
                 </div>
-                <div class="navitem navhide" id="Transpos">
+                <div class="navitem navhide" id="contactbut">
                     <div>
-                        <i class="fa-solid fa-bus"></i>
-                        <div class="navitcap">Transpos</div>
+                        <i class="fa-duotone fa-solid fa-id-card"></i>
+                        <div class="navitcap">Contact</div>
                     </div>
-                    <a href="#" class="multicon multicontran hide" id="rmulticon1">
+                    <!-- <a href="#" class="multicon multicontran hide" id="rmulticon1">
                         <div>Car</div>
                     </a>
                     <a href="#" class="multicon multicontran hide" id="rmulticon3">
@@ -94,15 +77,8 @@
                     </a>
                     <a href="#" class="multicon multicontran hide" id="rmulticon5">
                         <div>Airport</div>
-                    </a>
+                    </a> -->
                 </div>
-                <div class="navitem navhide">
-                    <a href="#">
-                        <i class="fa-brands fa-squarespace"></i>
-                        <div class="navitcap">Blog</div>
-                    </a>
-                </div>
-                <a href="#" class="navuser navhide"><i class="fa fa-user"></i></a>
             </div>
         </div>
     </div>
