--- a/a.Home.html
+++ b/a.Home.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="font-awesome-6.6.0-pro-full-main/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <title>Home</title>
+    <title>Long.D.Shine</title>
 </head>
 
 <body>
