--- a/a.Home.html
+++ b/a.Home.html
@@ -34,7 +34,7 @@
             <div class="navleft"><a href="#bannerimg1"></a></div>
             <div class="navright" id="navright">
                 <a href="#banner" class="navtitle navcurrent" id="navbarHome">Home</a>
-                <a href="#about" class="navtitle" id="navbarAbout">About Us</a>
+                <a href="#about" class="navtitle" id="navbarAbout">About Me</a>
                 <a href="#skill" class="navtitle" id="navbarSkill">Skills</a>
                 <a href="#project" class="navtitle" id="navbarProject">Projects</a>
                 <a href="#contact" class="navtitle" id="navbarContact">Contact Us</a>
@@ -126,27 +126,52 @@
         </div>
     </div>
     <div id="body">
-        <!-- <div class="space" id="about"></div>
+        <div class="space" id="about"></div>
         <div class="about">
             <div class="titleback"></div>
-            <div class="title">ABOUT US</div>
-            <div class="content">
-                <p class="bodytext">Hello! My name is Nguyễn Bảo Long</p>
-                <p class="bodytext">I am a front-end developer, currently pursuing a degree in Information Technology at
-                    Hanoi Metropolitan University. I have a deep passion for coding, particularly in software
-                    development and algorithmic problem-solving.</p>
+            <div class="title">ABOUT ME</div>
+            <div class="contentzone">
+                <div class="content myinfo">
+                    <div class="contenttitle myinfo">A little about me</div>
+                    <p class="bodytext myinfo">Hello!</p>
+                    <p class="bodytext myinfo">I am Nguyễn Bảo Long.</p>
+                    <p class="bodytext myinfo">I'm a second-year student at Hanoi Metropolitan University.</p>
+                    <p class="bodytext myinfo">My major is Information Technology.</p>
+                </div>
+                <div class="content">
+                    <div class="contenttitle">Career aspiration</div>
+                    <p class="bodytext">
+                        &nbsp; &nbsp;I seek a dynamic work environment that fosters collaboration and growth, enabling
+                        me to enhance my skills and contribute effectively. My goals include achieving promotions
+                        through dedication and
+                        securing a high income that reflects my expertise, ensuring financial stability for continuous
+                        professional development.
+                    </p>
+                </div>
+                <div class="content">
+                    <div class="contenttitle">My Passion</div>
+                    <p class="bodytext">
+                        &nbsp; &nbsp;I am a front-end developer, currently pursuing a degree in Information Technology
+                        at Hanoi Metropolitan University. I have a deep passion for coding, particularly in software
+                        development and algorithmic problem-solving.
+                    </p>
+                    <a class="linktomyprofile" href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html"
+                        target="_blank">More...</a>
+                </div>
+                <div class="content declare">
+                    <div class="contenttitle declare">Declaration</div>
+                    <p class="bodytext declare">
+                        &nbsp; &nbsp;If we were to collaborate, you would need to provide me with key
+                        information regarding the project requirements, desired features, and the target user base.
+                        Additionally, any reference websites or design guidelines you wish to incorporate would be
+                        helpful.
+                        I may ask a few technical questions to ensure a comprehensive understanding of your vision, and
+                        I
+                        will handle the rest, from coding and implementation to final deployment.
+                    </p>
+                </div>
             </div>
-            <div class="content">I am actively seeking a conducive work environment that encourages collaboration,
-                creativity, and continuous learning, allowing me to contribute effectively to projects. My goal is to
-                foster personal development by taking on challenging tasks, improving my technical skills, and enhancing
-                my problem-solving abilities. Additionally, I aim to achieve a promotion by demonstrating leadership
-                qualities, delivering high-quality results, and consistently adding value to the team. Ultimately, I
-                aspire to secure a high income that reflects my skills, dedication, and the positive impact I bring to
-                the organization, providing me with the financial stability to pursue further professional growth.
-            </div>
-            <div class="content"></div>
-            <div class="content"></div>
-        </div> -->
+        </div>
     </div>
     <script src="a.Home.js"></script>
     <script src="a.Home-banner.js"></script>
