--- a/a.Home.html
+++ b/a.Home.html
@@ -133,8 +133,8 @@
             <div class="contentzone">
                 <div class="content myinfo">
                     <div class="contenttitle myinfo">A little about me</div>
-                    <p class="bodytext myinfo">Hello!</p>
-                    <p class="bodytext myinfo">I am Nguyễn Bảo Long.</p>
+                    <p class="bodytext myinfo bold">Hello!</p>
+                    <p class="bodytext myinfo"><span>I am&nbsp;</span><span class="bold">Nguyễn Bảo Long</span></p>
                     <p class="bodytext myinfo">I'm a second-year student at Hanoi Metropolitan University.</p>
                     <p class="bodytext myinfo">My major is Information Technology.</p>
                 </div>
@@ -172,6 +172,78 @@
                 </div>
             </div>
         </div>
+        <div class="space" id="skill"></div>
+        <div class="skills">
+            <div class="title">SKILLS</div>
+            <div class="contentzone">
+                <div class="skill">
+                    <div class="skillname">Web Design</div>
+                    <div class="skillconfig">creating visually appealing and engaging website interfaces, optimizing
+                        user experience and interaction. </div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">Algorithm</div>
+                    <div class="skillconfig">Proficiency in constructing and analyzing algorithms, optimizing
+                        problem-solving processes efficiently. </div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">Programming</div>
+                    <div class="skillconfig">Proficiency in coding to develop software, applications, and solve
+                        technical problems. </div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">HTML</div>
+                    <div class="skillconfig">Building website structure, formatting content, and creating links between
+                        elements.</div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">C/C++</div>
+                    <div class="skillconfig">Proficiency in programming with C/C++, developing robust applications and
+                        optimizing performance.</div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">Java</div>
+                    <div class="skillconfig">Proficiency in programming with Java to develop robust, cross-platform
+                        applications.</div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">CSS</div>
+                    <div class="skillconfig">Skill in designing layout and styling for websites, enhancing user
+                        experience through structure and color.</div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">Python</div>
+                    <div class="skillconfig">Proficiency in programming with Python for application development, data
+                        analysis, and process automation.
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">JavaScript</div>
+                    <div class="skillconfig">Programming interactive and dynamic features for websites,
+                        enhancing user experience through functionality and effects.</div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">Figma</div>
+                    <div class="skillconfig">Proficiency in UI design and prototyping, creating interactive mockups for
+                        applications and websites.</div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">Git</div>
+                    <div class="skillconfig">Proficiency in version control for source code, tracking changes and
+                        collaborating in software development.</div>
+                </div>
+                <div class="skill">
+                    <div class="skillname">Github</div>
+                    <div class="skillconfig">Proficiency in using the platform to store source code, collaborate, and
+                        share software development projects.</div>
+                </div>
+            </div>
+        </div>
+        <div class="space"></div>
+        <div class="space"></div>
+        <div class="space"></div>
+        <div class="space"></div>
+        <div class="space"></div>
     </div>
     <script src="a.Home.js"></script>
     <script src="a.Home-banner.js"></script>
