--- a/a.Home.html
+++ b/a.Home.html
@@ -148,16 +148,6 @@
                         professional development.
                     </p>
                 </div>
-                <div class="content">
-                    <div class="contenttitle">My Passion</div>
-                    <p class="bodytext">
-                        &nbsp; &nbsp;I am a front-end developer, currently pursuing a degree in Information Technology
-                        at Hanoi Metropolitan University. I have a deep passion for coding, particularly in software
-                        development and algorithmic problem-solving.
-                    </p>
-                    <a class="linktomyprofile" href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html"
-                        target="_blank">More...</a>
-                </div>
                 <div class="content declare">
                     <div class="contenttitle declare">Declaration</div>
                     <p class="bodytext declare">
@@ -166,9 +156,18 @@
                         Additionally, any reference websites or design guidelines you wish to incorporate would be
                         helpful.
                         I may ask a few technical questions to ensure a comprehensive understanding of your vision, and
-                        I
-                        will handle the rest, from coding and implementation to final deployment.
+                        I will handle the rest, from coding and implementation to final deployment.
                     </p>
+                </div>
+                <div class="content pasion">
+                    <div class="contenttitle pasion">My Pasion</div>
+                    <p class="bodytext pasion">
+                        &nbsp; &nbsp;I am a front-end developer, currently pursuing a degree in Information Technology
+                        at Hanoi Metropolitan University. I have a deep passion for coding, particularly in software
+                        development and algorithmic problem-solving.
+                    </p>
+                    <a class="linktomyprofile" href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html"
+                        target="_blank">More...</a>
                 </div>
             </div>
         </div>
