--- a/a.Home.html
+++ b/a.Home.html
@@ -37,7 +37,7 @@
                 <a href="#about" class="navtitle" id="navbarAbout">About Me</a>
                 <a href="#skill" class="navtitle" id="navbarSkill">Skills</a>
                 <a href="#project" class="navtitle" id="navbarProject">Projects</a>
-                <a href="#contact" class="navtitle" id="navbarContact">Contact Us</a>
+                <a href="#contact" class="navtitle" id="navbarContact">Contact Me</a>
             </div>
             <div class="navbutton navradius navhide hide" id="navbutt">
                 <div class="navicon navhide" id="navicon" onclick="shownav()"><i class="fa-solid fa-bars"></i></div>
@@ -238,8 +238,15 @@
                 </div>
             </div>
         </div>
-        <div class="space"></div>
-        <div class="space"></div>
+        <div class="space" id="project"></div>
+        <div class="project">
+            <div class="title">PROJECTS</div>
+
+        </div>
+        <div class="space" id="contact"></div>
+        <div class="contact">
+            <div class="title">CONTACT ME</div>
+        </div>
         <div class="space"></div>
         <div class="space"></div>
         <div class="space"></div>
