--- a/a.Home.html
+++ b/a.Home.html
@@ -33,7 +33,7 @@
         <div class="navbar">
             <div class="navleft"><a href="#bannerimg1"></a></div>
             <div class="navright" id="navright">
-                <a href="#banner" class="navtitle navcurrent" id="navbarHome">Home</a>
+                <a href="#bannerr" class="navtitle" id="navbarHome">Home</a>
                 <a href="#about" class="navtitle" id="navbarAbout">About Me</a>
                 <a href="#skill" class="navtitle" id="navbarSkill">Skills</a>
                 <a href="#project" class="navtitle" id="navbarProject">Projects</a>
@@ -42,7 +42,7 @@
             <div class="navbutton navradius navhide hide" id="navbutt">
                 <div class="navicon navhide" id="navicon" onclick="shownav()"><i class="fa-solid fa-bars"></i></div>
                 <div class="navitem navhide" id="homebut">
-                    <a href="#banner">
+                    <a href="#bannerr">
                         <i class="fa-duotone fa-solid fa-house"></i>
                         <div class="navitcap">Home</div>
                     </a>
@@ -53,16 +53,16 @@
                         <div class="navitcap">About</div>
                     </a>
                     <!-- 
-                    <a href="#" class="multicon multiconpage hide" id="rmulticon0">
+                    <a href="https://arisu171.github.io/Long.D.Shine/" class="multicon multiconpage hide" id="rmulticon0">
                         <div>About</div>
                     </a>
-                    <a href="#" class="multicon multiconpage hide" id="rmulticon2">
+                    <a href="https://arisu171.github.io/Long.D.Shine/" class="multicon multiconpage hide" id="rmulticon2">
                         <div>Services</div>
                     </a>
-                    <a href="#" class="multicon multiconpage hide" id="rmulticon4">
+                    <a href="https://arisu171.github.io/Long.D.Shine/" class="multicon multiconpage hide" id="rmulticon4">
                         <div>Contact</div>
                     </a>
-                    <a href="#" class="multicon multiconpage hide" id="rmulticon6">
+                    <a href="https://arisu171.github.io/Long.D.Shine/" class="multicon multiconpage hide" id="rmulticon6">
                         <div>Dests</div>
                     </a>
                      -->
@@ -85,19 +85,20 @@
                         <div class="navitcap">Contact</div>
                     </a>
                     <!--                     
-                    <a href="#" class="multicon multicontran hide" id="rmulticon1">
+                    <a href="https://arisu171.github.io/Long.D.Shine/" class="multicon multicontran hide" id="rmulticon1">
                         <div>Car</div>
                     </a>
-                    <a href="#" class="multicon multicontran hide" id="rmulticon3">
+                    <a href="https://arisu171.github.io/Long.D.Shine/" class="multicon multicontran hide" id="rmulticon3">
                         <div>Bus</div>
                     </a>
-                    <a href="#" class="multicon multicontran hide" id="rmulticon5">
+                    <a href="https://arisu171.github.io/Long.D.Shine/" class="multicon multicontran hide" id="rmulticon5">
                         <div>Airport</div>
                     </a> -->
                 </div>
             </div>
         </div>
     </div>
+    <div class="space" id="bannerr"></div>
     <div id="banner">
         <div class="inf">
             <div class="text">
@@ -119,7 +120,7 @@
                     </div>
                 </div>
                 <div class="linkto">
-                    <a href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html" target="_blank">My Projects</a>
+                    <a href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html" target="_blank">My Excercises</a>
                 </div>
                 <br><br><br>
             </div>
@@ -162,8 +163,8 @@
                 <div class="content pasion">
                     <div class="contenttitle pasion">My Pasion</div>
                     <p class="bodytext pasion">
-                        &nbsp; &nbsp;I am a front-end developer, currently pursuing a degree in Information Technology
-                        at Hanoi Metropolitan University. I have a deep passion for coding, particularly in software
+                        &nbsp; &nbsp;I am a front-end developer, currently pursuing a degree in Information Technology.
+                        I have a deep passion for coding, particularly in software
                         development and algorithmic problem-solving.
                     </p>
                     <a class="linktomyprofile" href="https://arisu171.github.io/Long.D.Shine/Profile.Long.D.Shine.html"
@@ -239,17 +240,165 @@
             </div>
         </div>
         <div class="space" id="project"></div>
-        <div class="project">
+        <div class="projects">
             <div class="title">PROJECTS</div>
-
+            <div class="myproject">
+                <div class="project">
+                    <div class="workbutton"></div>
+                    <div class="work">
+                        <div class="work0">I</div>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B1 bttl.html" target="_blank"
+                            class="work1">1</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B1 1.html" target="_blank" class="work2">2</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B1 2.1.html" target="_blank"
+                            class="work3">3</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B1 2.2.html" target="_blank"
+                            class="work4">4</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B1 2.3.html" target="_blank"
+                            class="work5">5</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B2 1.Inline.html" target="_blank"
+                            class="work6">6</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B2 bttl 1.1.html" target="_blank"
+                            class="work7">7</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B2 bttl 1.2.html" target="_blank"
+                            class="work8">8</a>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="workbutton"></div>
+                    <div class="work">
+                        <div class="work0">II</div>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B2 2.1.html" target="_blank"
+                            class="work1">1</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B2 2.2.html" target="_blank"
+                            class="work2">2</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B2 2.3.html" target="_blank"
+                            class="work3">3</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B3 3.1.html" target="_blank"
+                            class="work4">4</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B3 3.2.html" target="_blank"
+                            class="work5">5</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B3 3.3.html" target="_blank"
+                            class="work6">6</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B3 3.4.html" target="_blank"
+                            class="work7">7</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B3 3.5.html" target="_blank"
+                            class="work8">8</a>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="workbutton"></div>
+                    <div class="work">
+                        <div class="work0">III</div>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B3 CSS.Syntax.html" target="_blank"
+                            class="work1">1</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B3 Window.html" target="_blank"
+                            class="work2">2</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B3 Lotus.html" target="_blank"
+                            class="work3">3</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B5 Material.html" target="_blank"
+                            class="work4">4</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B5 Baomoi.html" target="_blank"
+                            class="work5">5</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B6 Zing.html" target="_blank"
+                            class="work6">6</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B6 Kalium.html" target="_blank"
+                            class="work7">7</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B6 Kalium-2.html" target="_blank"
+                            class="work8">8</a>
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="workbutton"></div>
+                    <div class="work">
+                        <div class="work0">IV</div>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B8 Min-Max.html" target="_blank"
+                            class="work1">1</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B8 Gacha.html" target="_blank"
+                            class="work2">2</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B9 Form.html" target="_blank"
+                            class="work3">3</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B9 Banner.html" target="_blank"
+                            class="work4">4</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/B9 CALC.html" target="_blank"
+                            class="work5">5</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work6">6</a>
+                        <a href="https://arisu171.github.io/Project/Home/Home.html" target="_blank" class="work7">7</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/Total-Tool.html" target="_blank"
+                            class="work8">8</a>
+                    </div>
+                </div>
+                <div class="project none">
+                    <div class="workbutton"></div>
+                    <div class="work">
+                        <div class="work0">V</div>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work1">1</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work2">2</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work3">3</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work4">4</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work5">5</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work6">6</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work7">7</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work8">8</a>
+                    </div>
+                </div>
+                <div class="project none">
+                    <div class="workbutton"></div>
+                    <div class="work">
+                        <div class="work0">VI</div>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work1">1</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work2">2</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work3">3</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work4">4</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work5">5</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work6">6</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work7">7</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work8">8</a>
+                    </div>
+                </div>
+                <div class="project none">
+                    <div class="workbutton"></div>
+                    <div class="work">
+                        <div class="work0">VII</div>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work1">1</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work2">2</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work3">3</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work4">4</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work5">5</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work6">6</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work7">7</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work8">8</a>
+                    </div>
+                </div>
+                <div class="project none">
+                    <div class="workbutton"></div>
+                    <div class="work">
+                        <div class="work0">VIII</div>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work1">1</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work2">2</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work3">3</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work4">4</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work5">5</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work6">6</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work7">7</a>
+                        <a href="https://arisu171.github.io/Long.D.Shine/" target="_blank" class="work8">8</a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="space" id="contact"></div>
         <div class="contact">
             <div class="title">CONTACT ME</div>
+            <input type="text" class="cusinfo" id="cusinfo1" placeholder="Your name">
+            <input type="text" class="cusinfo" id="cusinfo2" placeholder="Email">
+            <input type="text" class="cusinfo" id="cusinfo3" placeholder="Number">
+            <textarea name="" id="messagetome" placeholder="Messages"></textarea>
+            <div class="sendcontact">Send</div>
         </div>
         <div class="space"></div>
         <div class="space"></div>
         <div class="space"></div>
+        <div id="copyright">@Copyright by Orias</div>
     </div>
     <script src="a.Home.js"></script>
     <script src="a.Home-banner.js"></script>
