--- a/a.Home.html
+++ b/a.Home.html
@@ -131,7 +131,7 @@
         <div class="about">
             <div class="titleback"></div>
             <div class="title">ABOUT ME</div>
-            <div class="contentzone">
+            <div class="contentzone" id="aboutme">
                 <div class="content myinfo">
                     <div class="contenttitle myinfo">A little about me</div>
                     <p class="bodytext myinfo bold">Hello!</p>
@@ -139,7 +139,7 @@
                     <p class="bodytext myinfo">I'm a second-year student at Hanoi Metropolitan University.</p>
                     <p class="bodytext myinfo">My major is Information Technology.</p>
                 </div>
-                <div class="content">
+                <div class="content aspire">
                     <div class="contenttitle">Career aspiration</div>
                     <p class="bodytext">
                         &nbsp; &nbsp;I seek a dynamic work environment that fosters collaboration and growth, enabling
@@ -174,65 +174,65 @@
         </div>
         <div class="space" id="skill"></div>
         <div class="skills">
-            <div class="title">SKILLS</div>
+            <div class="title" id="myskill">SKILLS</div>
             <div class="contentzone">
-                <div class="skill">
+                <div class="skill lsk">
                     <div class="skillname">Web Design</div>
                     <div class="skillconfig">creating visually appealing and engaging website interfaces, optimizing
                         user experience and interaction. </div>
                 </div>
-                <div class="skill">
+                <div class="skill msk">
                     <div class="skillname">Algorithm</div>
                     <div class="skillconfig">Proficiency in constructing and analyzing algorithms, optimizing
                         problem-solving processes efficiently. </div>
                 </div>
-                <div class="skill">
+                <div class="skill rsk">
                     <div class="skillname">Programming</div>
                     <div class="skillconfig">Proficiency in coding to develop software, applications, and solve
                         technical problems. </div>
                 </div>
-                <div class="skill">
+                <div class="skill lsk">
                     <div class="skillname">HTML</div>
                     <div class="skillconfig">Building website structure, formatting content, and creating links between
                         elements.</div>
                 </div>
-                <div class="skill">
+                <div class="skill msk">
                     <div class="skillname">C/C++</div>
                     <div class="skillconfig">Proficiency in programming with C/C++, developing robust applications and
                         optimizing performance.</div>
                 </div>
-                <div class="skill">
+                <div class="skill rsk">
                     <div class="skillname">Java</div>
                     <div class="skillconfig">Proficiency in programming with Java to develop robust, cross-platform
                         applications.</div>
                 </div>
-                <div class="skill">
+                <div class="skill lsk">
                     <div class="skillname">CSS</div>
                     <div class="skillconfig">Skill in designing layout and styling for websites, enhancing user
                         experience through structure and color.</div>
                 </div>
-                <div class="skill">
+                <div class="skill msk">
                     <div class="skillname">Python</div>
                     <div class="skillconfig">Proficiency in programming with Python for application development, data
                         analysis, and process automation.
                     </div>
                 </div>
-                <div class="skill">
+                <div class="skill rsk">
                     <div class="skillname">JavaScript</div>
                     <div class="skillconfig">Programming interactive and dynamic features for websites,
                         enhancing user experience through functionality and effects.</div>
                 </div>
-                <div class="skill">
+                <div class="skill lsk">
                     <div class="skillname">Figma</div>
                     <div class="skillconfig">Proficiency in UI design and prototyping, creating interactive mockups for
                         applications and websites.</div>
                 </div>
-                <div class="skill">
+                <div class="skill msk">
                     <div class="skillname">Git</div>
                     <div class="skillconfig">Proficiency in version control for source code, tracking changes and
                         collaborating in software development.</div>
                 </div>
-                <div class="skill">
+                <div class="skill rsk">
                     <div class="skillname">Github</div>
                     <div class="skillconfig">Proficiency in using the platform to store source code, collaborate, and
                         share software development projects.</div>
@@ -241,7 +241,7 @@
         </div>
         <div class="space" id="project"></div>
         <div class="projects">
-            <div class="title">PROJECTS</div>
+            <div class="title" id="myproj">PROJECTS</div>
             <div class="myproject">
                 <div class="project">
                     <div class="workbutton"></div>
@@ -387,13 +387,16 @@
             </div>
         </div>
         <div class="space" id="contact"></div>
-        <div class="contact">
+        <div class="contact" id="contactus">
             <div class="title">CONTACT ME</div>
             <input type="text" class="cusinfo" id="cusinfo1" placeholder="Your name">
+            <div class="error cusinfo" id="name-error"></div>
             <input type="text" class="cusinfo" id="cusinfo2" placeholder="Email">
+            <div class="error cusinfo" id="email-error"></div>
             <input type="text" class="cusinfo" id="cusinfo3" placeholder="Number">
-            <textarea name="" id="messagetome" placeholder="Messages"></textarea>
-            <div class="sendcontact">Send</div>
+            <div class="error cusinfo" id="phone-error"></div>
+            <textarea name="message" class="cusinfo" id="messagetome" placeholder="Messages"></textarea>
+            <div class="sendcontact cusinfo" onclick="sendmes()">Send</div>
         </div>
         <div class="space"></div>
         <div class="space"></div>
