--- a/a.Home.html
+++ b/a.Home.html
@@ -394,7 +394,7 @@
             <div class="error cusinfo" id="name-error"></div>
             <input type="text" class="cusinfo" id="cusinfo2" placeholder="Email">
             <div class="error cusinfo" id="email-error"></div>
-            <input type="text" class="cusinfo" id="cusinfo3" placeholder="Number">
+            <input type="number" class="cusinfo" id="cusinfo3" placeholder="Number">
             <div class="error cusinfo" id="phone-error"></div>
             <textarea name="message" class="cusinfo" id="messagetome" placeholder="Messages"></textarea>
             <div class="sendcontact cusinfo" onclick="sendmes()">Send</div>
