--- a/Profile.Long.D.Shine.html
+++ b/Profile.Long.D.Shine.html
@@ -13,9 +13,11 @@
 <body>
     <div id="box">
         <div class="avatar">
-            <img src="D.logo.png" id="avt">
-            <div id="name">Long. D. Shine</div>
-            <div id="bio">We give your best design services</div>
+            <a href="https://arisu171.github.io/Long.D.Shine/a.Home.html">
+                <img src="D.logo.png" id="avt">
+                <div id="name">Long. D. Shine</div>
+                <div id="bio" style="color: white">We give your best design services</div>
+            </a>
         </div>
         <ul class="head-bar">
             <li class="list-block" style="padding-left:13%"><a class="block" href="#box">Home</a></li>
